Add cover images

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -43,15 +43,12 @@
                     ],
                     physicalCover: 
                     {
-                        imgSrc: "../img/content/discography/SuperSonicSongs.png",
-                        backgrounds: [ { title: "A Test Background", link: "#abc"}],
-                        fonts: [ { title: "A Test Font", link: "#def"}]
+                        imgSrc: "../img/content/discography/ThrillOfTheFeel.jpg",
+                        fonts: [ { title: "Impact", link: "https://www.dafontfree.io/impact-font/"}]
                     },
                     physicalBack:
                     {
-                        imgSrc: "../img/content/discography/physical/SSS/Back.jpg",
-                        backgrounds: [ { title: "A Test Background", link: "#abc"}],
-                        fonts: [ { title: "A Test Font", link: "#def"}]
+                        imgSrc: "../img/content/discography/physical/Thrill/Back.jpg",
                     },
                     physicalObi:
                     {
