Improve booklet browser experience

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="physical block">
-            <h2 class="title">Physical Media</h2>
+            <h2 class="physicalTitle">Physical Media</h2>
 
             <div class="content">
                 <div class="cd">
