Add "Expand" indicator message

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -149,7 +149,10 @@
         </div>
 
         <div class="physical block">
-            <h2 class="physicalTitle">Physical Media</h2>
+            <div class="physicalTitle">
+                <h2 class="physicalTitleText">Physical Media</h2>
+                <p class="physicalTitleExpand"><img src="../img/icons/expand.svg"> Click on an image to view it in full</p>
+            </div>
 
             <div class="content">
                 <div class="cd">
