Add zoom feature

--- a/base/bodyEnd.html
+++ b/base/bodyEnd.html
@@ -23,3 +23,7 @@
         <iframe title="Menu Contents" class="contents" src=""></iframe>
     </div>
 </div>
+
+<div class="zoom" id="zoom">
+    <img id="zoomImg" src="img/content/discography/2N2R.png" />
+</div>
