--- a/menus/credits.html
+++ b/menus/credits.html
@@ -12,7 +12,7 @@
 
         <script>
             window.addEventListener('load', () => {
-                window.parent.postMessage('500px', '*');
+                window.parent.postMessage('!500px', '*');
             });
         </script>
     </head>
