--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -151,7 +151,7 @@
         <div class="physical block">
             <div class="physicalTitle">
                 <h2 class="physicalTitleText">Physical Media</h2>
-                <p class="physicalTitleExpand"><img src="../img/icons/expand.svg"> Click on an image to view it in full</p>
+                <p class="physicalTitleExpand"><img src="../img/icons/expand.svg"> Click to view in full</p>
             </div>
 
             <div class="content">
