Fix zoom auto-opening

--- a/base/bodyEnd.html
+++ b/base/bodyEnd.html
@@ -25,5 +25,5 @@
 </div>
 
 <div class="zoom" id="zoom">
-    <img id="zoomImg" src="img/content/discography/2N2R.png" />
+    <img id="zoomImg" />
 </div>
