Add disc spin on scroll

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -42,6 +42,7 @@
                         { title: "All The Way", playbackLength: "4:09", tags: ['first'] },
                         { title: "Open Your Heart", playbackLength: "5:11", tags: ['first'], description: "A bonus track featured on the album - taken from <i>Sonic Adventure</i>, released two years prior." },
                     ],
+                    discImg: "../img/content/discography/physical/Thrill/Disc.png",
                     physicalCover: 
                     {
                         imgSrc: "../img/content/discography/ThrillOfTheFeel.jpg",
@@ -149,15 +150,15 @@
             </ol>
         </div>
 
-        <div class="physical block">
+        <div class="physical block" id="physical">
             <div class="physicalTitle">
                 <h2 class="physicalTitleText">Physical Media</h2>
                 <p class="physicalTitleExpand"><img src="../img/icons/expand.svg"> Click to view in full</p>
             </div>
 
-            <div class="content">
+            <div class="content" id="physicalContent">
                 <div class="cd">
-                    <img class="cdImg" src="../img/content/discography/physical/SSS/CD.png" data-action='zoom'>
+                    <img id="disc" class="cdImg" src="../img/content/discography/physical/SSS/CD.png" data-action='zoom'>
                 </div>
 
                 <div class="coverings outerCoverings">
