Add per album physical background

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -42,6 +42,7 @@
                         { title: "All The Way", playbackLength: "4:09", tags: ['first'] },
                         { title: "Open Your Heart", playbackLength: "5:11", tags: ['first'], description: "A bonus track featured on the album - taken from <i>Sonic Adventure</i>, released two years prior." },
                     ],
+                    physicalBg: "../img/visuals/Background/Discography/SkyBg.jpg",
                     discImg: "../img/content/discography/physical/Thrill/Disc.png",
                     physicalCover: 
                     {
