--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -154,7 +154,7 @@
         <div class="physical block" id="physical">
             <div class="physicalTitle">
                 <h2 class="physicalTitleText">Physical Media</h2>
-                <p class="physicalTitleExpand"><img src="../img/icons/expand.svg"> Click to view in full</p>
+                <p class="physicalTitleExpand"><img src="../img/icons/expand.svg">Click images to zoom</p>
             </div>
 
             <div class="content" id="physicalContent">
