Add font styling to section titles

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -125,12 +125,12 @@
         </div>
 
         <div class="description block">
-            <h2>Description</h2>
+            <h2 class="dimentiaFont">Description</h2>
             <div class="text"><p>This is a description about this amazing album - it's so amazing because of reason A, B and C. So yeah!</p></div>
         </div>
 
         <div class="tracks block">
-            <h2 class="title">Tracks</h2>
+            <h2 class="title dimentiaFont">Tracks</h2>
             <ol class="trackList">
                 <!--<li class="track">
                     <div class="main">
@@ -153,7 +153,7 @@
 
         <div class="physical block" id="physical">
             <div class="physicalTitle">
-                <h2 class="physicalTitleText">Physical Media</h2>
+                <h2 class="physicalTitleText dimentiaFont">Physical Media</h2>
                 <p class="physicalTitleExpand"><img src="../img/icons/expand.svg">Click images to zoom</p>
             </div>
 
