Create song view "description" section

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -11,10 +11,18 @@
     </head>
     <body>
         <div class="intro block">
-            <h1>Intro</h1>
+            <h1>Revvin' Up</h1>
         </div>
         <div class="desc block">
             <h2 class="dimentiaFont">Description</h2>
+
+            <h3 class="heading">Fan Description</h3>
+            <hr>
+            <p>This is a mind-blowing description about how epic this song is.</p>
+
+            <h3 class="heading">Jun Description</h3>
+            <p class="subHeading"><small>(Written by Jun on Twitter)</small></p>
+            <hr>
             <p>This is a mind-blowing description about how epic this song is.</p>
         </div>
         <div class="lyrics block">
