Improve "Description" appearance

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -16,20 +16,26 @@
         <div class="desc block">
             <h2 class="dimentiaFont">Description</h2>
 
+            <hr>
             <h3 class="heading">Fan Description</h3>
-            <hr>
             <p>This is a mind-blowing description about how epic this song is.</p>
+            <p>Just a whole load of text.</p>
+            <p>Keep it going!</p>
+            <p>Cool.</p>
 
-            <h3 class="heading">Jun Description</h3>
-            <p class="subHeading"><small>(Written by Jun on Twitter)</small></p>
             <hr>
+            <h3 class="heading">Band Description</h3>
+            <p class="subHeading">(Written by Jun on Twitter)</p>
             <p>This is a mind-blowing description about how epic this song is.</p>
         </div>
         <div class="lyrics block">
             <h2 class="dimentiaFont">Lyrics</h2>
+            <p>
+                Some lyrics of this song
+            </p>
         </div>
-        <div class="listen block">
-            <h2 class="dimentiaFont">Listen</h2>
+        <div class="performances block">
+            <h2 class="dimentiaFont">Performances</h2>
         </div>
         <div class="lists block">
             <h2 class="dimentiaFont">Lists</h2>
