Add "Crush 40" album details

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -99,6 +99,55 @@
                         {},
                         {}
                     ]
+                },
+                crush40: {
+                    title: "Crush 40",
+                    description: `
+                    <p>This album marks the first time the name "Crush 40" was used. Before this album the band was known as "Sons Of Angels", and they didn't go by any specific name in "Sonic Adventure" and "Sonic Adventure 2" (Just crediting the individual performers). 
+                    <p>In theory, this album is just a western release of the Thrill Of The Feel album, but there's a little more to it. All of the vocal tracks from Thrill Of The Feel are included on this release, including Open Your Heart, which was a bonus track on Thrill Of The Feel. However, the instrumental tracks were not carried over from Thrill Of The Feel, and instead 3 other songs from the Sonic Adventure games were included.
+                    <p>Live & Learn, from "Sonic Adventure 2" was included as the first track, and two bonus tracks were added: It Doesn't Matter (by Jun Senoue, featuring Tony Harnell on vocals), from "Sonic Adventure", and Escape From The City (by Jun Senoue, featuring Ted Poley & Tony Harnell on vocals), from "Sonic Adventure 2".</p>
+                    <p>The order of the setlist was drastically changed from Thrill Of The Feel, with only "Into The Wind" remaining in the same position. "Revvin' Up", "Into The Wind" and "All The Way" also have slightly longer/shorter playing lengths (by one second) between the two albums. Open Your Heart is also 5 seconds longer on this album.</p>
+                    <p>The name "Crush 40" would be carried over to the game "Sonic Heroes", which would be released later in 2003.</p>
+                    `,
+                    releaseYear: 2003,
+                    playbackLength: "43:51",
+                    tracks:
+                    [
+                        { title: "Live & Learn", playbackLength: "4:30", tags: [ 'first' ], description: "Crush 40's hit song, Live & Learn. This is the song's first album release." },
+                        { title: "Revvin' Up", playbackLength: "4:34", tags: [ 'rerelease' ] },
+                        { title: "Into The Wind", playbackLength: "4:29", tags: [ 'rerelease' ] },
+                        { title: "In the Lead", playbackLength: "4:03", tags: [ 'rerelease' ] },
+                        { title: "Watch Me Fly...", playbackLength: "5:09", tags: [ 'rerelease' ] },
+                        { title: "Fuel Me", playbackLength: "2:44", tags: ['rerelease'] },
+                        { title: "Dangerous Ground", playbackLength: "2:10", tags: ['rerelease'] },
+                        { title: "All The Way", playbackLength: "4:10", tags: ['rerelease'] },
+                        { title: "Open Your Heart", playbackLength: "5:16", tags: ['rerelease'] },
+                        { title: "It Doesn't Matter", playbackLength: "4:27", tags: ['notC40'] },
+                        { title: "Escape From The City", playbackLength: "2:20", tags: ['notC40'] },
+                    ],
+                    physicalBg: "../img/visuals/Background/Discography/Crush40_MotionBlur.png",
+                    discImg: "../img/content/discography/physical/Crush40/Disc.png",
+                    physicalCover: 
+                    {
+                        imgSrc: "../img/content/discography/Crush40.jpg"
+                    },
+                    physicalBack:
+                    {
+                        imgSrc: "../img/content/discography/physical/Crush40/Back.jpg"
+                    },
+                    physicalTray:
+                    {
+                        imgSrc: "../img/content/discography/physical/Crush40/Tray.jpg",
+                        backgrounds: [ { title: "A Test Background", link: "#abc"}],
+                        fonts: [ { title: "A Test Font", link: "#def"}]
+                    },
+                    bookletPageSourcePrefix: '../img/content/discography/physical/Crush40/',
+                    bookletPageSourceExtension: '.jpg',
+                    bookletPages:
+                    [
+                        {},
+                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
+                    ]
                 }
             }
         </script>
