Add "Super Sonic Songs" details

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -148,6 +148,73 @@
                         {},
                         {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
                     ]
+                },
+                sss: {
+                    title: "Super Sonic Songs",
+                    description: `
+                    <p>Super Sonic Songs is the first compilation album released by Crush 40.</p>
+                    <p>It features a range of tracks from the band's ~10-year history at that point, and a few new tracks as well: A cover of Kenichi Tokoi's Un-gravitify, the vocal theme for "Sonic Riders: Zero Gravity", a cover of The Cult's Fire Woman, from their "Sonic Temple" album, and Is It You, a fully original song created for this release.</p>
+                    <p>Next to the new songs, I Am... All Of Me, His World, Knight Of The Wind and Open Your Heart got a fresh, new mix for this release as well.</p>
+                    <p>While the original CD release of Super Sonic Songs did not feature any bonus tracks, a few years after the CD release, the album was released on digital platforms. This digital release featured 3 bonus tracks: Free, With Me -Massive Power Mix-, and Seven Rings In Hand. These songs were available on previous releases, however.</p>
+                    `,
+                    releaseYear: 2009,
+                    playbackLength: "1:25:53",
+                    tracks:
+                    [
+                        { title: "I Am... All Of Me", playbackLength: "3:51", tags: [ 'remix' ], description: "Crush 40's hit song, Live & Learn. This is the song's first album release." },
+                        { title: "His World", playbackLength: "5:17", tags: [ 'remix' ] },
+                        { title: "Un-gravitify", playbackLength: "4:45", tags: [ 'cover', 'first' ] },
+                        { title: "All Hail Shadow", playbackLength: "4:02", tags: [ 'rerelease' ] },
+                        { title: "Never Turn Back", playbackLength: "4:40", tags: [ 'rerelease' ] },
+                        { title: "Revvin' Up", playbackLength: "4:35", tags: [ 'rerelease' ] },
+                        { title: "Into The Wind", playbackLength: "4:29", tags: [ 'rerelease' ] },
+                        { title: "Watch Me Fly...", playbackLength: "5:11", tags: [ 'rerelease' ] },
+                        { title: "Fire Woman", playbackLength: "5:17", tags: [ 'cover', 'first' ] },
+                        { title: "Sonic Heroes", playbackLength: "3:28", tags: [ 'rerelease' ] },
+                        { title: "What I'm Made Of...", playbackLength: "3:44", tags: [ 'rerelease' ] },
+                        { title: "Live Life", playbackLength: "5:38", tags: [ 'rerelease' ] },
+                        { title: "Knight Of The Wind", playbackLength: "4:32", tags: [ 'remix' ] },
+                        { title: "Live & Learn", playbackLength: "4:31", tags: [ 'rerelease' ] },
+                        { title: "Open Your Heart", playbackLength: "4:49", tags: ['remix'] },
+                        { title: "Dangerous Ground", playbackLength: "2:10", tags: ['rerelease'] },
+                        { title: "Is It You", playbackLength: "4:58", tags: [ 'original', 'first' ] },
+                        { title: "Free", playbackLength: "3:22", tags: ['rerelease'], description: "Bonus track on digital releases." },
+                        { title: "With Me -Massive Power Mix-", playbackLength: "3:55", tags: ['rerelease'], description: "Bonus track on digital releases." },
+                        { title: "Seven Rings In Hand", playbackLength: "4:49", tags: ['rerelease'], description: "Bonus track on digital releases." },
+                    ],
+                    physicalBg: "../img/visuals/Background/Discography/SSSBackground.png",
+                    discImg: "../img/content/discography/physical/SSS/CD.png",
+                    physicalCover: 
+                    {
+                        imgSrc: "../img/content/discography/SuperSonicSongs.png"
+                    },
+                    obiFront:
+                    {
+                        imgSrc: "../img/content/discography/physical/SSS/Obi.jpg",
+                        rightTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        middleTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        leftTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `
+                    },
+                    physicalBack:
+                    {
+                        imgSrc: "../img/content/discography/physical/SSS/Back.jpg"
+                    },
+                    physicalTray:
+                    {
+                        imgSrc: "../img/content/discography/physical/SSS/Tray.jpg"
+                    },
+                    bookletPageSourcePrefix: '../img/content/discography/physical/SSS/',
+                    bookletPageSourceExtension: '.png',
+                    bookletPages:
+                    [
+                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
+                    ]
                 }
             }
         </script>
