Move PNG booklet images to JPG

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -210,7 +210,7 @@
                         imgSrc: "../img/content/discography/physical/SSS/Tray.jpg"
                     },
                     bookletPageSourcePrefix: '../img/content/discography/physical/SSS/',
-                    bookletPageSourceExtension: '.png',
+                    bookletPageSourceExtension: '.jpg',
                     bookletPages:
                     [
                         {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
