Add "Rise Again" info

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -215,6 +215,106 @@
                     [
                         {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
                     ]
+                },
+                riseagain: {
+                    title: "Rise Again",
+                    description: `
+                    <p>Rise Again is a compilation of the four singles released by Crush 40 throughout 2011 and 2012: "Song of Hope", "Sonic Youth", "One Of Those Days", "Rise Again".</p>
+                    <p>The singles are featured on this EP in the order they were released - with "Song of Hope" being the first to "Rise Again" being the last to be released.</p>
+                    <p>There was a variant of this CD created for Sonic Boom 2012, unofficially known as the <i>Sonic Boom 2012 Promotional EP</i>. This release is the same as the full EP, but excludes the 2011 single "Song of Hope", instead opting to only include the other three singles, released in 2012.</p>
+                    `,
+                    releaseYear: 2012,
+                    playbackLength: "17:56",
+                    tracks:
+                    [
+                        { title: "Sonic Youth", playbackLength: "3:49", tags: [ 'rerelease' ] },
+                        { title: "One Of Those Days", playbackLength: "4:31", tags: [ 'rerelease' ] },
+                        { title: "Song Of Hope", playbackLength: "5:11", tags: [ 'rerelease' ], description: "Not featured in the <i>Sonic Boom 2012 Promotional EP</i>." },
+                        { title: "Rise Again", playbackLength: "4:26", tags: [ 'rerelease' ] }
+                    ],
+                    physicalBg: "../img/visuals/Background/Discography/RiseAgain.png",
+                    discImg: "../img/content/discography/physical/RiseAgain/Disc.png",
+                    physicalCover: 
+                    {
+                        imgSrc: "../img/content/discography/RiseAgain.jpg"
+                    },
+                    obiFront:
+                    {
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Obi.jpg",
+                        rightTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        middleTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        leftTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `
+                    },
+                    physicalBack:
+                    {
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Back.jpg"
+                    },
+                    physicalTray:
+                    {
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Tray.jpg"
+                    },
+                    bookletPageSourcePrefix: '../img/content/discography/physical/RiseAgain/',
+                    bookletPageSourceExtension: '.jpg',
+                    bookletPages:
+                    [
+                        {}, {}, {}, {}
+                    ]
+                },
+                riseagain: {
+                    title: "Rise Again",
+                    description: `
+                    <p>Rise Again is a compilation of the four singles released by Crush 40 throughout 2011 and 2012: "Song of Hope", "Sonic Youth", "One Of Those Days", "Rise Again".</p>
+                    <p>The singles are featured on this EP in the order they were released - with "Song of Hope" being the first to "Rise Again" being the last to be released.</p>
+                    <p>There was a variant of this CD created for Sonic Boom 2012, unofficially known as the <i>Sonic Boom 2012 Promotional EP</i>. This release is the same as the full EP, but excludes the 2011 single "Song of Hope", instead opting to only include the other three singles, released in 2012.</p>
+                    `,
+                    releaseYear: 2012,
+                    playbackLength: "17:56",
+                    tracks:
+                    [
+                        { title: "Sonic Youth", playbackLength: "3:49", tags: [ 'rerelease' ] },
+                        { title: "One Of Those Days", playbackLength: "4:31", tags: [ 'rerelease' ] },
+                        { title: "Song Of Hope", playbackLength: "5:11", tags: [ 'rerelease' ], description: "Not featured in the <i>Sonic Boom 2012 Promotional EP</i>." },
+                        { title: "Rise Again", playbackLength: "4:26", tags: [ 'rerelease' ] }
+                    ],
+                    physicalBg: "../img/visuals/Background/Discography/RiseAgain.png",
+                    discImg: "../img/content/discography/physical/RiseAgain/Disc.png",
+                    physicalCover: 
+                    {
+                        imgSrc: "../img/content/discography/RiseAgain.jpg"
+                    },
+                    obiFront:
+                    {
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Obi.jpg",
+                        rightTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        middleTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `,
+                        leftTranslation: `
+                            <p><i>To be filled in</i></p>
+                        `
+                    },
+                    physicalBack:
+                    {
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Back.jpg"
+                    },
+                    physicalTray:
+                    {
+                        imgSrc: "../img/content/discography/physical/RiseAgain/Tray.jpg"
+                    },
+                    bookletPageSourcePrefix: '../img/content/discography/physical/RiseAgain/',
+                    bookletPageSourceExtension: '.jpg',
+                    bookletPages:
+                    [
+                        {}, {}, {}, {}
+                    ]
                 }
             }
         </script>
